# iced_aksel

./: .gitignore  Cargo.toml  LICENSE  MSAA_AND_CACHING.md  README.md  flake.nix
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: check.yml  doc-check.yml  flake-check.yml  update-flake.yml
documentation/: docusaurus.config.ts  package-lock.json
examples/: chart_shapes.rs  chart_simple.rs  chart_stress.rs
examples/axes/: Cargo.toml
examples/axes/src/: main.rs
examples/bar_chart/: Cargo.toml
examples/bar_chart/src/: bar.rs  main.rs
examples/candlestick/: Cargo.toml  README.md
examples/candlestick/src/: chart.rs  indicators.rs  items.rs  main.rs
examples/core_axes/: Cargo.toml  README.md  index.html
examples/core_axes/src/: main.rs
examples/core_interactions/: Cargo.toml  README.md  index.html
examples/core_interactions/src/: main.rs
examples/core_interactivity/: Cargo.toml
examples/core_interactivity/src/: main.rs
examples/core_scales/: Cargo.toml  README.md  index.html
examples/core_scales/src/: main.rs
examples/core_shapes/: Cargo.toml  README.md  index.html
examples/core_shapes/src/: main.rs
examples/core_template/: Cargo.toml  README.md  index.html
examples/core_template/src/: main.rs
examples/core_text/: Cargo.toml
examples/core_text/src/: main.rs
examples/dashboard/: Cargo.toml  README.md  index.html
examples/dashboard/src/: bar.rs  barchart.rs  combined.rs  gauge.rs  line.rs  main.rs
examples/dashboard/src/combined/: series.rs
examples/dashboard/src/combined/series/: bar.rs  line.rs
examples/dashboard/src/saved/: main_meh.rs  mainforlater.rs  untitled.rs
examples/interactions/: Cargo.toml
examples/interactions/src/: main.rs
examples/legacy/: chart_candlestick.rs  chart_candlestick_simple.rs  chart_drawings.rs  chart_interactive.rs  chart_lavalamp.rs  chart_layers.rs  chart_life.rs  chart_multiple_axes.rs  chart_physics.rs
examples/polygon/: Cargo.toml
examples/polygon/src/: main.rs
examples/scales/: Cargo.toml
examples/scales/src/: main.rs
examples/shapes/: Cargo.toml
examples/shapes/src/: main.rs
examples/showcase_animated_text/: Cargo.toml
examples/showcase_animated_text/src/: main.rs
examples/showcase_candlestick/: Cargo.toml  index.html
examples/showcase_candlestick/src/: chart.rs  items.rs  main.rs
examples/showcase_dashboard/: Cargo.toml  index.html
examples/showcase_dashboard/src/: bar.rs  gauge.rs  line.rs  main.rs
examples/showcase_spectrum/: Cargo.toml  README.md  index.html
examples/showcase_spectrum/src/: audio.rs  main.rs  math.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
examples/solar_system/: Cargo.toml
examples/solar_system/src/: main.rs
examples/spectrum/: Cargo.toml  README.md
examples/spectrum/src/: audio.rs  main.rs  math.rs
examples/stress/: Cargo.toml  README.md  index.html
examples/stress/src/: main.rs
examples/testing/: Cargo.toml
examples/testing/src/: main.rs  main_speed.rs
examples/text/: Cargo.toml
examples/text/src/: main.rs
iced_aksel/: Cargo.toml
iced_aksel/src/: action.rs  axis.rs  event.rs  geometry.rs  interaction.rs  layer.rs  length.rs  lib.rs  measure.rs  memory.rs  plot.rs  radii.rs  render.rs  shape.rs  state.rs  stroke.rs  style.rs  transform.rs
iced_aksel/src/axis/: grid.rs  label.rs  marker.rs  position.rs  tick.rs
iced_aksel/src/axis/tick/: label.rs
iced_aksel/src/geometry/: shapes.rs  target.rs  tessellator.rs  traits.rs
iced_aksel/src/geometry/tessellator/: dash.rs  fast.rs  lyon.rs  path.rs
iced_aksel/src/geometry/tessellator/lyon/: dash.rs
iced_aksel/src/interaction/: area.rs  id.rs  math.rs  query.rs
iced_aksel/src/render/: buffer.rs  cache.rs  meshbuffer.rs  primitive.rs  tessellation.rs  text.rs
iced_aksel/src/render/buffer/: mesh.rs  path.rs  shader.rs
iced_aksel/src/render/buffer/mesh/: tessellation.rs
iced_aksel/src/render/buffer/mesh/tessellation/: manual.rs  math.rs  text.rs
iced_aksel/src/render/buffer/mesh/tessellation/manual/: basic.rs  linear.rs
iced_aksel/src/render/buffer/shader/: atlas.rs  data.rs  mesh.rs  pipeline.rs  shader.wgsl  shader_blit.glsl  shader_renderer.glsl  shader_renderer.wgsl
iced_aksel/src/render/buffer/shader/pipeline/: atlas.rs  data.rs
iced_aksel/src/render/cache/: math.rs  mesh.rs  path.rs
iced_aksel/src/render/cache/mesh/: tessellation.rs
iced_aksel/src/render/cache/mesh/tessellation/: manual.rs  math.rs  text.rs
iced_aksel/src/render/cache/mesh/tessellation/manual/: basic.rs  linear.rs  polygon.rs  radial.rs
iced_aksel/src/render/tessellation/: complex.rs  manual.rs  math.rs  text.rs
iced_aksel/src/render/tessellation/manual/: basic.rs  linear.rs  mesh.rs  polygon.rs  radial.rs
iced_aksel/src/shape/: arc.rs  area.rs  bezier.rs  circle.rs  ellipse.rs  label.rs  line.rs  polygon.rs  polyline.rs  rectangle.rs  sector.rs  spline.rs  triangle.rs
iced_aksel/src/shape/logs/: circle.md  polygon.md  sector.md  triangle.md
iced_aksel/src/shape/polyline/: dashed.rs
