[workspace]
members = ["iced_aksel", "examples/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.clippy]
inline_always = "allow"

perf = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

[workspace.dependencies]
aksel = { git = "https://github.com/QuistAPS/aksel", branch = "main" }
chrono = "0.4"
cpal = "0.16.0"
derive_more = { version = "2.0", features = ["from", "error", "display", "into"]}
derivative = "2.2"
iced = { git = "https://github.com/iced-rs/iced", branch = "master" }
indexmap = "2.12"
lyon_tessellation = "1.0"
lyon_path = "1.0"
lyon = "1.0"
rand = "0.9"
realfft = "3.5.0"
strum = "0.27"
strum_macros = "0.27"
