[workspace]
members = ["iced_aksel", "examples/*"]
resolver = "3"
description = "A data-driven charting library for Iced"
authors = ["Mads Ahlquist Jensen <madsaj10@outlook.com>", "Dennis Mellquist"]
repository = "https://github.com/Quist/iced_aksel"
license = "MIT"
keywords = ["iced", "chart", "canvas"]
categories = ["GUI"]
exclude = [
"flake.nix",
"flake.lock",
".github/*",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.clippy]
inline_always = "allow"
perf = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

[workspace.dependencies]
aksel = "0.2"
chrono = "0.4"
cpal = "0.16.0"
derive_more = { version = "2.0", features = ["from", "error", "display", "into"]}
derivative = "2.2"
iced = "0.14.0"
indexmap = "2.12"
lyon_tessellation = "1.0"
lyon_path = "1.0"
lyon = "1.0"
rand = "0.9"
realfft = "3.5.0"
strum = "0.27"
strum_macros = "0.27"
