[package]
name = "iced_aksel"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
aksel.workspace = true
bytemuck.workspace = true
derive_more.workspace = true
derivative.workspace = true
earcutr.workspace = true
etagere.workspace = true
iced_core = "0.14"
iced_graphics = { version = "0.14", features = ["geometry"] }
iced_renderer = { version = "0.14", default-features = false, features = ["wgpu", "geometry", "wayland"] }
iced_wgpu = "0.14"
# iced_tiny_skia = "0.14"
image.workspace = true
indexmap.workspace = true
lyon_tessellation.workspace = true
lyon_path.workspace = true
lyon.workspace = true
lru.workspace = true

[dev-dependencies]
rand.workspace = true
realfft.workspace = true
cpal.workspace = true
strum.workspace = true
strum_macros.workspace = true
chrono.workspace = true
iced.workspace = true

[lints]
workspace = true
