[package]
name = "iced_aksel"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
aksel.workspace = true
derive_more.workspace = true
derivative.workspace = true
iced_core.workspace = true
iced_graphics.workspace = true
iced_renderer.workspace = true
iced_wgpu.workspace = true
iced_tiny_skia.workspace = true
indexmap.workspace = true
lyon_tessellation.workspace = true
lyon_path.workspace = true
lyon.workspace = true
earcutr.workspace = true
lru.workspace = true
smallvec.workspace = true
rapidhash.workspace = true

[dev-dependencies]
rand.workspace = true
realfft.workspace = true
cpal.workspace = true
strum.workspace = true
strum_macros.workspace = true
chrono.workspace = true
iced.workspace = true

[lints]
workspace = true
