[package]
name = "candlestick"
version.workspace = true
edition.workspace = true

[dependencies]
aksel.workspace = true
chrono.workspace = true
iced.workspace = true
rand.workspace = true

iced_aksel = { path = "../../iced_aksel/" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced = { workspace = true, features = ["web-colors", "thread-pool", "webgl", "fira-sans"] }
getrandom = { version = "0.3", features = [ "wasm_js" ]}

[lints]
workspace = true
