[package]
name = "core_template"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
iced.workspace = true

iced_aksel = { path = "../../iced_aksel/" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced = { workspace = true, features = ["web-colors", "thread-pool", "webgl", "fira-sans"] }

[lints]
workspace = true
