[package]
name = "core_text"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
iced.workspace = true
rand.workspace = true

iced_aksel = { path = "../../iced_aksel/" }

[lints]
workspace = true
