[package]
name = "spectrum"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
cpal.workspace = true
iced.workspace = true
realfft.workspace = true
triple_buffer.workspace = true
iced_aksel = { path = "../../iced_aksel/" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced = { workspace = true, features = ["web-colors", "thread-pool", "webgl", "fira-sans"] }

[lints]
workspace = true
